# SALSA

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  doc_test.py  environment-minimal.yml  environment.yml  paper.bib  paper.md  playground.ipynb  postBuild  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
SALS/: __init__.py  absorber_extractor.py  absorber_plotter.py  collect_features.py  construct_random_rays.py  generate_catalog.py  generate_light_rays.py
absorber_extraction_class/: absorber_extractor.py  absorber_plotter.py  multi_plot.py
analysis/: collect_random_ray_info.py  combine_np_arrays.py  make_exploratory_plots.py
bash_scripts/: check_frames.sh  check_num.sh  combine_ccwh_gas.sh  combine_ions.sh  foggie_rays.sh  make_mp_movies.sh
comparison_code/: contour_v_cloud.py  countour_v_cloud.py
cosmo_analysis/: capture_movie_frames.py  center_finder.py  construct_rays.py  create_slices_proj.py  orient.ipynb  playground.ipynb
docs/: environment.yml  requirements.txt  rtd_environment.yml
general_utils/: center_finder.py  construct_rays.py  filter_definitions.py
impact_par_selection/: impact_histo.py
job_scripts/: capture_movie_frames.py  construct_rays.py  runCaptureMovie.sb  runCaptureMovie.sh  runCaptureMovie_cgm.sb  runCaptureMovie_cosmo.sb  runCaptureMovie_iso.sb  runConstructRays.sb  runConstructRays.sh  runConstructRays_cosmo.sb  runConstructRays_iso.sb  runCreateSlices.sb  runFeatureExtraction.sb  runFeatureExtractionCGM.sb  runPolar.sb  runRandomConstructRays.sb  runRotProj.sb  runRotProj_cgm.sb  submit_rot_movies.sh
(+147 files in other folders)
