[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:invalid value encountered in log10:RuntimeWarning',
    'ignore:invalid value encountered in divide:RuntimeWarning',
]